<resources>
    <string name="app_name">LLP2ST</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search for songs</string>
    <string name="loading">Loading…</string>

    <string name="error_main">Error loading LLPractice data. Tap to retry.</string>
    <string name="error_random">Error getting random song.</string>
    <string name="error_song">Error downloading song.</string>
    <string name="error_detail_title">Error</string>
    <string name="error_detail">Error loading song data.</string>
    <string name="error_detail_signin">You need to be signed in to view this song. Tap here to sign in.</string>

    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_downloads">Downloads</string>
    <string name="title_activity_login">Login to LLPractice</string>

    <string name="pref_leadin">Lead In</string>
    <string name="pref_leadin_summ">Number of seconds before a song starts.</string>
    <string name="pref_offset">Timing offset</string>
    <string name="pref_offset_summ">Offset timing of all notes by this many seconds.</string>

    <string name="dialog_delete_message">Are you sure you want to delete this song?</string>
    <string name="dialog_delete">Delete</string>
    <string name="dialog_cancel">Cancel</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_downloads">Downloads</string>
    <string name="menu_stop">Stop</string>
    <string name="menu_random">Random song</string>
    <string name="menu_login">Login</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_redownload">Redownload beatmaps</string>
    <string name="menu_url">Open URL/ID</string>

    <string name="menu_copy_title">Copy title</string>
    <string name="menu_copy_artist">Copy artist</string>
    <string name="menu_copy_description">Copy description</string>
    <string name="menu_copy_url">Copy URL</string>

    <string name="menu_copy_comment">Copy comment</string>

    <string name="list_viewdetails">Details</string>
    <string name="list_preview">Preview</string>
    <string name="list_noresults">No results</string>

    <string name="login_username">Username or e-mail:</string>
    <string name="login_password">Password:</string>
    <string name="login_login">Login</string>

    <string name="detail_comments">Comments:</string>
    <string name="detail_loadmore">Load more</string>
    <string name="detail_nocomments">No comments</string>

    <string name="user_posts">Posts</string>
    <string name="user_clicks">Clicks</string>
    <string name="user_comments">Comments</string>
</resources>
