<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/action_stop"
        android:title="@string/menu_stop"
        android:icon="@drawable/ic_stop_white"
        android:visible="false"
        app:showAsAction="always" />

    <item android:id="@+id/action_search"
        android:title="@string/search_title"
        android:icon="@drawable/ic_search_white"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView" />

    <item android:id="@+id/action_random"
        android:title="@string/menu_random"
        android:icon="@drawable/ic_dice_white"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_settings"
        android:title="@string/menu_settings"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_downloads"
        android:title="@string/menu_downloads"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_redownload"
        android:title="@string/menu_redownload"
        app:showAsAction="never"
        android:visible="false" />

    <item
        android:id="@+id/action_url"
        android:title="@string/menu_url"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_login"
        android:title="@string/menu_login"
        app:showAsAction="never"
        android:visible="false"/>

    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never"
        android:visible="false" />

</menu>
