<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ImageView
        android:id="@+id/avatar"
        android:layout_width="@dimen/list_item_avatar_size"
        android:layout_height="@dimen/list_item_avatar_size"
        android:layout_margin="@dimen/user_info_padding"/>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_item_avatar_size"
        android:layout_marginBottom="@dimen/user_info_padding"
        android:layout_marginTop="@dimen/user_info_padding"
        android:layout_marginRight="@dimen/user_info_padding"
        android:padding="5dp">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/user_posts"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:id="@+id/user_posts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_item_avatar_size"
        android:layout_marginBottom="@dimen/user_info_padding"
        android:layout_marginTop="@dimen/user_info_padding"
        android:layout_marginRight="@dimen/user_info_padding"
        android:padding="5dp">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/user_clicks"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:id="@+id/user_clicks"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="@dimen/list_item_avatar_size"
        android:layout_marginBottom="@dimen/user_info_padding"
        android:layout_marginTop="@dimen/user_info_padding"
        android:layout_marginRight="@dimen/user_info_padding"
        android:padding="5dp">

        <LinearLayout
            style="@style/Widget.CardContent"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <TextView
                android:text="@string/user_comments"
                android:textStyle="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

            <TextView
                android:id="@+id/user_comments"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"/>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>